--- a/index.hbs
+++ b/index.hbs
@@ -85,7 +85,7 @@ into the {body} of the default.hbs template --}}
     </div>
   </main>
 </div>
-<section class="m-hero is-bottom">
+<section class="m-hero is-bottom bg-zhuzh">
   <div class="l-wrapper align-center">
     <h2 class="m-hero-title">Start localization testing today</h2>
     <div class="m-hero__content m-hero__meta">
