--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -7,6 +7,7 @@
 @import "common/helpers";
 @import "common/global";
 @import "common/icons";
+@import "common/backgrounds";
 
 @import "layouts/wrapper";
 @import "layouts/content";
