--- a/src/sass/common/_global.scss
+++ b/src/sass/common/_global.scss
@@ -2,31 +2,31 @@
 
 @font-face {
   font-family: 'EuclidSquare';
-  src: url('/blog/assets/fonts/euclidsquare-regular.ttf') format('truetype');
+  src: url(#{$font_path}/euclidsquare-regular.ttf) format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: 'EuclidSquare';
-  src: url('/blog/assets/fonts/euclidsquare-medium.ttf') format('truetype');
+  src: url(#{$font_path}/euclidsquare-medium.ttf) format('truetype');
   font-weight: 500;
   font-style: normal;
 }
 @font-face {
   font-family: 'EuclidSquare';
-  src: url('/blog/assets/fonts/euclidsquare-mediumitalic.otf');
+  src: url(#{$font_path}/euclidsquare-mediumitalic.otf);
   font-weight: 500;
   font-style: italic;
 }
 @font-face {
   font-family: 'EuclidSquare';
-  src: url('/blog/assets/fonts/euclidsquare-semibold.ttf') format('truetype');
+  src: url(#{$font_path}/euclidsquare-semibold.ttf) format('truetype');
   font-weight: 600;
   font-style: bold;
 }
 @font-face {
   font-family: 'EuclidSquare';
-  src: url('/blog/assets/fonts/euclidsquare-bold.ttf') format('truetype');
+  src: url(#{$font_path}/euclidsquare-bold.ttf) format('truetype');
   font-weight: 700;
   font-style: normal;
 }
