--- a/src/sass/components/hero/_hero.scss
+++ b/src/sass/components/hero/_hero.scss
@@ -13,9 +13,8 @@
   }
 
   &.is-bottom {
-    padding: 3rem 0;
-    background: var(--background-color);
-    border-top: 1px solid var(--secondary-subtle-color);
+    margin: 3rem 0;
+    background-color: transparent;
   }
 
   &.with-picture {
@@ -38,11 +37,11 @@
     @include respond-to('medium') {
       background-color: transparent;
       background-image: 
-          url('/blog/assets/images/main-1.svg'), 
-          url('/blog/assets/images/main-2.svg'), 
-          url('/blog/assets/images/main-3.svg'), 
-          url('/blog/assets/images/oval.svg'), 
-          url('/blog/assets/images/oval.svg');
+          url('#{$image_path}/main-1.svg'), 
+          url('#{$image_path}/main-2.svg'), 
+          url('#{$image_path}/main-3.svg'), 
+          url('#{$image_path}/oval.svg'), 
+          url('#{$image_path}/oval.svg');
       background-repeat: no-repeat;
       background-position: top right, left top, 10% 75%, top left, right center;
       background-size: contain, 25% 45%, 25% 40%, contain, contain;
