--- a/src/sass/common/_variables.scss
+++ b/src/sass/common/_variables.scss
@@ -39,7 +39,7 @@ $mobile-space: 20px;
 $mobile-bar-height: 50px;
 $desktop-bar-height: 64px;
 
-// $image_path: '/assets/images';
-// $font_path: '/assets/fonts';
-$image_path : '/blog/assets/images';
-$font_path: '/blog/assets/fonts';
+$image_path: '/assets/images';
+$font_path: '/assets/fonts';
+// $image_path : '/blog/assets/images';
+// $font_path: '/blog/assets/fonts';
