--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -2,13 +2,6 @@
 This footer template is shared across all the pages.
 --}}
 
-{{!-- <footer class="m-footer-nav">
-  <div class="m-footer__content">
-    <p class="m-footer-copyright jslicense">
-      <a href="{{asset "html/javascript.html"}}" rel="jslicense">{{t "JavaScript license information"}}</a>
-    </p>
-  </div>
-</footer> --}}
 <div class="m-footer-nav">
   <div class="l-wrapper">
     <div class="l-grid space-around">
@@ -98,7 +91,7 @@ This footer template is shared across all the pages.
         </div>
     </div>
 </div>
-<footer class="m-footer-copyright">
+<footer class="m-footer-copyright m-footer__content">
       <span class="m-footer-copyright-text">Like most companies, we use analytics software and cookies to track how folks use our website. By using our site, you consent to this tracking. For more details, check out our <a href="/faq#cookies">FAQ</a>.</span>
       <span class="m-footer-copyright-text">&#169; {{date format="YYYY"}} WonderNetwork. Use of WonderProxy is governed by our <a href="/privacy">Privacy Policy</a> and <a href="/terms">Terms of Service</a>.</span>
 </footer>
