--- a/src/sass/components/author/_author.scss
+++ b/src/sass/components/author/_author.scss
@@ -7,6 +7,7 @@
   border-right-width: 0;
   border-style: solid;
   margin: 0 auto;
+  margin-bottom: 20px;
 
   @include respond-to('medium') {
     display: flex;
