--- a/index.hbs
+++ b/index.hbs
@@ -24,7 +24,7 @@ into the {body} of the default.hbs template --}}
   </section>
   
   <main>
-    <div class="l-content">
+    <div class="l-content is-homepage">
       <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
         <div class="l-grid centered">
           {{#get "posts" filter="featured:true" include="authors,tags" limit="5" as |featured|}}
