--- a/src/sass/layouts/_content.scss
+++ b/src/sass/layouts/_content.scss
@@ -4,6 +4,10 @@
   background-position: bottom center;
   background-repeat: repeat-x;
 
+  &.is-homepage {
+    background: none;
+  }
+
   &.in-post {
     background: none;
   }
