Add button hover styles, link logo to .com

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -11,7 +11,7 @@ This header template is shared across all the pages.
     <button class="m-icon-button in-mobile-topbar js-open-menu" aria-label="Open menu">
       <span class="icon-menu"></span>
     </button>
-    <a href="{{@site.url}}" class="m-logo in-mobile-topbar"></a>
+    <a href="/" class="m-logo in-mobile-topbar"></a>
     <button class="m-icon-button in-mobile-topbar js-open-search" aria-label="Open search">
       <span class="icon-search"></span>
     </button>
@@ -24,7 +24,7 @@ This header template is shared across all the pages.
     <div class="m-menu__main" data-aos="fade-down">
       <div class="l-wrapper">
         <div class="m-nav">
-          <a href="{{@site.url}}" class="m-logo in-mobile-topbar"></a>
+          <a href="/" class="m-logo in-mobile-topbar"></a>
           <nav class="m-nav__left">
             <ul role="submenu">
               {{#if @site.navigation}}
