--- a/src/sass/components/ui/_button.scss
+++ b/src/sass/components/ui/_button.scss
@@ -17,11 +17,15 @@
   border: 0;
   background-color: transparent;
   @extend .no-appearance;
-  @include transition(all .25s cubic-bezier(.02,.01,.47,1));
 
   &.outlined {
     color: var(--titles-color);
     border: 1px solid var(--primary-foreground-color);
+
+    &:hover, 
+    &:focus {
+      border-color: var(--secondary-foreground-color);
+    }
   }
 
   &.filled {
@@ -36,6 +40,11 @@
   &.primary {
     color: var(--background-color) !important;
     background-color: var(--primary-button);
+
+    &:hover, 
+    &:focus {
+      background-color: var(--secondary-foreground-color);
+    }
   }
 }
 
