--- a/src/sass/components/ui/_button.scss
+++ b/src/sass/components/ui/_button.scss
@@ -51,5 +51,5 @@
 // Style classes in posts, carry-over from the last theme
 .btn.btn-secondary {
   @extend .m-button;
-  @extend .outlined;
+  @extend .primary;
 }
