--- a/post.hbs
+++ b/post.hbs
@@ -30,11 +30,13 @@ into the {body} of the default.hbs template --}}
             <header class="m-heading">
               <h1 class="m-heading__title in-post">{{title}}</h1>
               <div class="m-heading__meta">
-                {{#if primary_tag}}
-                <a href="{{primary_tag.url}}" class="m-heading__meta__tag">{{primary_tag.name}}</a>
+                <a href="{{primary_author.url}}" class="m-heading__meta__tag">{{primary_author.name}}</a>
                 <span class="m-heading__meta__divider">&bull;</span>
-                {{/if}}
                 <span class="m-heading__meta__time">{{date published_at}}</span>
+                {{#if primary_tag}}
+                <span class="m-heading__meta__divider">&bull;</span>
+                <a href="{{primary_tag.url}}" class="m-heading__meta__tag">{{primary_tag.name}}</a>
+                {{/if}}
               </div>
             </header>
             <div class="pos-relative js-post-content">
@@ -55,27 +57,14 @@ into the {body} of the default.hbs template --}}
                 </div>
               </div>
               {{content}}
+              <div>
+                <h6>Tags</h6>
+                {{tags separator=" &bull; "}}
+              </div>
             </div>
           </div>
         </div>
-        {{!-- Email subscribe form at the bottom of the page --}}
-        {{#if @labs.subscribers}}
-        <section class="m-subscribe-section">
-          <div class="l-wrapper in-post">
-            <div class="m-subscribe-section__content">
-              <div class="m-subscribe-section__text">
-                <h4 class="m-subscribe-section__title">{{t "Subscribe to our newsletter"}}</h4>
-                <p class="m-subscribe-section__description">
-                  {{t "We'll send you our latest blog posts and product updates. Unsubscribe anytime."}}
-                </p>
-              </div>
-              <div class="m-subscribe-section__form">
-                {{subscribe_form }}
-              </div>
-            </div>
-          </div>
-        </section>
-        {{/if}}
+
         {{#if @labs.subscribers}}
         <section class="m-author">
         {{else}}
@@ -129,32 +118,21 @@ into the {body} of the default.hbs template --}}
             </div>
           </div>
         </section>
-        {{!-- If you want to embed comments, this is a good place to do it! --}}
-        {{!--
-          <section class="m-comments">
-            <div class="m-load-comments">
-              <div class="m-load-comments__line"></div>
-              <button class="m-icon-button filled as-load-comments js-tooltip js-load-comments" data-tippy-content="Load comments">
-                <span class="icon-comments"></span>
-              </button>
+      <section class="m-subscribe-section">
+          <div class="l-wrapper in-post">
+            <div class="m-subscribe-section__content">
+              <div class="m-subscribe-section__text">
+                <h4 class="m-subscribe-section__title">{{t "Subscribe to our newsletter"}}</h4>
+                <p class="m-subscribe-section__description">
+                  {{t "We'll send you our latest blog posts and product updates. Unsubscribe anytime."}}
+                </p>
+              </div>
+              <div class="m-subscribe-section__form">
+                {{subscribe_form }}
+              </div>
             </div>
-            <div class="m-load-comments__iframe l-wrapper in-comments js-comments-iframe">
-              <div id="disqus_thread"></div>
-              <script>
-                var disqus_config = function () {
-                  this.page.url = "{{url absolute="true"}}";
-                  this.page.identifier = "ghost-{{comment_id}}"
-                };
-                (function () {
-                  var d = document, s = d.createElement('script');
-                  s.src = 'https://CHANGETHIS.disqus.com/embed.js';
-                  s.setAttribute('data-timestamp', +new Date());
-                  (d.head || d.body).appendChild(s);
-                })();
-              </script>
-            </div>
-          </section>
-          --}}
+          </div>
+        </section>
         {{/post}}
         {{!-- Related posts --}}
         {{#get "posts" limit="3" filter="tags:[{{post.tags}}]+id:-{{post.id}}" include="tags,authors" as |related|}}
