--- a/src/sass/layouts/_post-content.scss
+++ b/src/sass/layouts/_post-content.scss
@@ -99,6 +99,10 @@
     }
   }
 
+  em {
+    font-weight: 300;
+  }
+
   b, strong {
     font-weight: 600;
   }
@@ -124,6 +128,7 @@
 
     li {
       margin-bottom: 20px;
+      font-weight: 300;
     }
   }
 
@@ -290,9 +295,9 @@
     line-height: 1.5;
     font-size: 1.125rem;
     font-style: italic;
-    font-family: Georgia, 'Times New Roman', Times, serif;
     padding: 0 40px;
     margin: 0 0 25px;
+    font-weight: 300;
 
     @include respond-to('medium') {
       letter-spacing: 0.3px;
@@ -326,6 +331,7 @@
     font-size: 0.875rem;
     width: calc(100% + 40px);
     margin: 0 -#{$mobile-space} 25px;
+    font-weight: 300;
 
     @include respond-to('medium') {
       font-size: 1rem;
@@ -335,6 +341,11 @@
 
     thead {
       border-bottom: 1px solid var(--table-head-border-bottom);
+
+      th {
+        text-align: left;
+        padding: 1rem;
+      }
 
       td {
         font-weight: 600;
@@ -351,8 +362,8 @@
     }
 
     td {
-      text-align: center;
       padding: 10px;
+      word-break: keep-all;
 
       @include respond-to('medium') {
         padding: 20px;
@@ -362,7 +373,7 @@
 
   code {
     display: inline-block;
-    color: var(--link-color);
+    color: var(---titles-color);
     font-size: 0.9rem;
     padding: 0 5px;
     border-radius: 5px;
