--- a/post.hbs
+++ b/post.hbs
@@ -64,12 +64,7 @@ into the {body} of the default.hbs template --}}
             </div>
           </div>
         </div>
-
-        {{#if @labs.subscribers}}
         <section class="m-author">
-        {{else}}
-        <section class="m-author no-subscribers">
-        {{/if}}
           <div class="m-author__content">
             <div class="m-author__picture">
               <a href="{{primary_author.url}}" class="m-author-picture" aria-label="Author picture">
@@ -128,7 +123,7 @@ into the {body} of the default.hbs template --}}
                 </p>
               </div>
               <div class="m-subscribe-section__form">
-                {{subscribe_form }}
+                {{> subscribe_form }}
               </div>
             </div>
           </div>
