Add swiftype files, style edits

--- a/author.hbs
+++ b/author.hbs
@@ -59,7 +59,7 @@ into the {body} of the default.hbs template --}}
         {{/if}}
       </ul>
     </div>
-    <a class="m-button primary" href="{{@blog.url}}/authors">View all authors</a>
+    <a class="m-button outlined" href="{{@blog.url}}/authors">View all authors</a>
   </div>
   </section>
   {{/author}}
