--- a/default.hbs
+++ b/default.hbs
@@ -56,9 +56,6 @@
     {{!-- All the main content gets inserted here, index.hbs, post.hbs, etc --}}
     {{{body}}}
 
-    {{!-- Search form --}}
-    {{> search}}
-
     {{!-- The footer --}}
     {{> footer}}
 
@@ -67,6 +64,9 @@
     <script defer src="https://unpkg.com/@tryghost/content-api@1.2.7/umd/content-api.min.js"></script>
     <script defer src="{{asset "js/manifest.js"}}"></script>
     <script defer src="{{asset "js/vendor.js"}}"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script defer src="{{asset "js/jquery.swiftype.search.js"}}"></script>
+    <script defer src="{{asset "js/jquery.swiftype.autocomplete.js"}}"></script>
     <script defer src="{{asset "js/app.js"}}"></script>
 
     {{!-- The #block helper will pull in data from the #contentFor other template files --}}
