--- a/src/sass/components/search/_search.scss
+++ b/src/sass/components/search/_search.scss
@@ -1,51 +1,47 @@
-.m-search {
-  visibility: hidden;
-  position: fixed;
-  top: 0;
-  left: 0;
+//Custom styles
+.filter-table{
+  padding: 10px 0 10px 32px;
+  height: auto;
+  min-width: 220px;
+  background: url(#{$image_path}/filter.svg) no-repeat 8px;
+}
+
+.site-search-form {
+  @include respond-to('medium') {
+      position: absolute;
+      right: 0;
+      padding: 0;
+  }
+
+  padding: 12px 0;
+}
+
+.st-default-search-input {
+  height: 48px;
+  padding: 10px 0 10px 32px;
+  min-width: 0;
+  transition: all .5s ease;
+  color: $wonderBlack;
   width: 100%;
-  height: 100%;
-  opacity: 0;
-  overflow-y: auto;
-  z-index: 2;
-  background-color: var(--transparent-background-color);
-  -webkit-overflow-scrolling: touch;
-  @include transform(scale(1.2));
-  @include transition(all 0.4s cubic-bezier(0.165, 0.84, 0.44, 1));
 
-  &.opened {
-    visibility: visible;
-    opacity: 1;
-    z-index: 10;
-    @include transform(scale(1));
+  &:focus {
+    @include respond-to('medium') {
+          width: 320px;
+          transition: all .5s ease;
+          background-color: #fff;
+          color: $wonderBlack;
+          cursor: auto;
+      }
+  }
+
+  @include respond-to('medium') {
+      width: 32px;
+      color: $wonderBlack;
+      cursor: pointer;
   }
 }
 
-.m-search__content {
-  padding: 80px $mobile-space 40px;
-  margin: 0 auto;
-
-  @include respond-to('medium') {
-    padding-top: 100px;
-    padding-bottom: 50px;
-    max-width: 700px;
-  }
-
-  @include respond-to('extra-large') {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  @include respond-to('largest') {
-    max-width: 800px;
-  }
-}
-
-.m-search__form {
-  margin-bottom: 30px;
-
-  @include respond-to('medium') {
-    max-width: 500px;
-    margin: 0 auto 45px;
-  }
+.st-default-search-input:not(:focus){
+  box-shadow: none;
+  border: none;
 }
