--- a/src/sass/layouts/_post-content.scss
+++ b/src/sass/layouts/_post-content.scss
@@ -99,6 +99,17 @@
     }
   }
 
+  .recent-articles {
+    display:block;
+    margin-left: 0px;
+    @include transition(margin-left linear 0.2s);
+    &:hover,
+    &:focus {
+      margin-left: -8px;
+      @include transition(margin-left linear 0.2s);
+    }
+  }
+
   em {
     font-weight: 300;
   }
@@ -263,7 +274,7 @@
     position: relative;
     margin: 30px 0;
     border: 0;
-    border-top: 1px solid var(--secondary-subtle-color);
+    border-top: 3px solid var(--secondary-subtle-color);
 
     @include respond-to('medium') {
       margin: 50px 0;
