--- a/tag.hbs
+++ b/tag.hbs
@@ -16,9 +16,10 @@ into the {body} of the default.hbs template --}}
   <div class="m-hero__content" data-aos="fade-down">
     <h1 class="m-hero-title bigger">{{name}}</h1>
     <p class="m-heading__description p-bottom">{{description}}</p>
-    <p class="m-heading__meta">
+    <p class="m-heading__meta p-bottom">
       {{plural ../pagination.total empty=(t "No posts") singular=(t "1 post") plural=(t "% posts")}} {{t "with this tag"}}
     </p>
+    <a class="m-button outlined" href="{{@blog.url}}/tags">View all tags</a>
   </div>
   </section>
   {{/tag}}
