--- a/src/sass/common/_themes.scss
+++ b/src/sass/common/_themes.scss
@@ -8,7 +8,7 @@
   --titles-color: #0C3233;
   --primary-button: #005253;
   --link-color: #008466;
-  --primary-border-color: #9b9b9b;
+  --primary-border-color: #efefef;
   --secondary-border-color: #edf0f0;
   --article-shadow-normal: 0 10px 10px rgba(0,0,0,0.08);
   --article-shadow-hover: 0 4px 60px 0 rgba(0,0,0,0.2);
