--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -1,7 +1,4 @@
 .m-header {
-  // position: fixed;
-  // top: 0;
-  // left: 0;
   width: 100%;
   z-index: 4;
   background-color: var(--background-color);
@@ -9,7 +6,7 @@
   @include transition(transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1));
 
   @include respond-to('medium') {
-    padding: 40px 0;
+    padding: 40px 0 0 0;
   }
 
   &.mobile-menu-opened {
@@ -21,7 +18,6 @@
   }
 
   &.headroom--pinned {
-    // @include bs(0 4px 8px rgba(0, 0, 0, 0.05));
     @include transform(translateY(0%));
 
     .m-header__shadow {
