--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -61,6 +61,7 @@
 @import "components/search/search";
 @import "components/search/icon";
 @import "components/search/result";
+@import "components/search/autocomplete";
 @import "components/footer";
 
 @import"components/404/title";
