--- a/default.hbs
+++ b/default.hbs
@@ -9,7 +9,7 @@
     <title>{{meta_title}} - WonderProxy Blog</title>
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta class="swiftype" name="title" data-type="string" content="{{meta_title}} - Blog" />
+    <meta class="swiftype" name="title" data-type="string" content="{{meta_title}}" />
 
     {{#is "author"}}
         {{#if author.bio}}
@@ -26,6 +26,8 @@
           {{/if}}
         {{/post}}
     {{/is}}
+
+    {{> swiftype }}
 
     {{!-- Styles'n'Scripts --}}
     <link rel="stylesheet" type="text/css" href="{{asset "css/app.css"}}" media="screen" />
@@ -59,16 +61,17 @@
     {{!-- The footer --}}
     {{> footer}}
 
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     {{!-- Common scripts shared between pages --}}
     <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver%2CPromise%2CArray.prototype.includes%2CString.prototype.endsWith%2CString.prototype.startsWith%2CObject.assign%2CNodeList.prototype.forEach"></script>
     <script defer src="https://unpkg.com/@tryghost/content-api@1.2.7/umd/content-api.min.js"></script>
     <script defer src="{{asset "js/manifest.js"}}"></script>
     <script defer src="{{asset "js/vendor.js"}}"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script defer src="{{asset "js/app.js"}}"></script>
     <script defer src="{{asset "js/jquery.swiftype.search.js"}}"></script>
     <script defer src="{{asset "js/jquery.swiftype.autocomplete.js"}}"></script>
-    <script defer src="{{asset "js/app.js"}}"></script>
-
+    <script defer src="{{asset "js/search.js"}}"></script>
+    
     {{!-- The #block helper will pull in data from the #contentFor other template files --}}
     {{{block "scripts"}}}
 
