--- a/page-searchresults.hbs
+++ b/page-searchresults.hbs
@@ -1,6 +1,6 @@
 {{!--
-This template is used for the authors page.
-You must first create a page called Authors in the dashboard to enable it.
+This template is used for the search results page.
+You must first create a page called Search Results in the dashboard to enable it.
 --}}
 
 {{!-- The tag below means: insert everything in this file
@@ -14,15 +14,14 @@ into the {body} of the default.hbs template --}}
     {{> hero background=feature_image}}
     <div class="m-hero__content" data-aos="fade-down">
       <h1 class="m-hero-title bigger">{{title}}</h1>
-      {{#if custom_excerpt}}
-      <p class="m-hero-description">{{custom_excerpt}}</p>
-      {{/if}}
+      <p class="m-hero-description"></p>
     </div>
     </section>
     <main>
       <div class="l-content">
         <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
-            <div class="st-search-container"></div>
+            {{!-- Display search results in this container --}}
+            <div class="l-grid centered" id="st-search-container"></div>
         </div>
       </div>
     </main>
