--- a/src/sass/components/header/_nav.scss
+++ b/src/sass/components/header/_nav.scss
@@ -108,7 +108,7 @@
   display: none;
   padding: 1rem 0;
   margin-top: 2rem;
-  border-bottom: 1px solid var(--primary-border-color);
+  // border-bottom: 1px solid var(--primary-border-color);
   border-top: 1px solid var(--primary-border-color);
   @include respond-to('medium') {
     display: block;
@@ -131,7 +131,7 @@
     a {
       color: var(--primary-button);
 
-      &.current {
+      .current & {
         font-weight: bold;
       }
     }
