Remove share link from twitter

--- a/src/sass/components/header/_nav.scss
+++ b/src/sass/components/header/_nav.scss
@@ -128,12 +128,12 @@
     display: inline-block;
     margin-right: 2rem;
 
+    &.current {
+      font-weight: bold;
+    }
+
     a {
       color: var(--primary-button);
-
-      .current & {
-        font-weight: bold;
-      }
     }
   }
 }
