--- a/post.hbs
+++ b/post.hbs
@@ -42,10 +42,10 @@ into the {body} of the default.hbs template --}}
             <div class="pos-relative js-post-content">
               <div class="m-share">
                 <div class="m-share__content js-sticky">
-                  <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute='true'}}?utm_source=blog&utm_medium=social&utm_campaign=fbshare" class="m-icon-button filled in-share" target="_blank" rel="noopener" aria-label="Facebook">
+                  <a href="https://www.facebook.com/sharer/sharer.php?u={{url absolute='true'}}{{encode '?utm_source=blog&utm_medium=social&utm_campaign=fbshare' }}" class="m-icon-button filled in-share" target="_blank" rel="noopener" aria-label="Facebook">
                     <span class="icon-facebook"></span>
                   </a>
-                  <a href="https://twitter.com/intent/tweet?text={{encode title}}&url={{url absolute='true'}}?utm_source=blog&utm_medium=social&utm_campaign=twittershare" class="m-icon-button filled in-share" target="_blank" rel="noopener" aria-label="Twitter">
+                  <a href="https://twitter.com/intent/tweet?text={{encode title}}&url={{url absolute='true'}}{{encode '?utm_source=blog&utm_medium=social&utm_campaign=twittershare' }}" class="m-icon-button filled in-share" target="_blank" rel="noopener" aria-label="Twitter">
                     <span class="icon-twitter"></span>
                   </a>
                   <button class="m-icon-button filled in-share progress js-scrolltop" aria-label="Scroll to top">
