Align mobile menu with website

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -8,10 +8,13 @@ This header template is shared across all the pages.
   <header class="m-header js-header">
 {{/if}}
   <div class="m-mobile-topbar" data-aos="fade-down">
-    <button class="m-icon-button in-mobile-topbar js-open-menu" aria-label="Open menu">
-      <span class="icon-menu"></span>
-    </button>
     <a href="/" class="m-logo in-mobile-topbar"></a>
+    <button class="m-icon-button in-mobile-topbar js-open-menu" aria-label="Open menu">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+    </button>
   </div>
 
   <div class="m-menu js-menu">
