--- a/partials/swiftype.hbs
+++ b/partials/swiftype.hbs
@@ -1,7 +1,5 @@
 
-{{!--
-    Define custom properties for swiftype
---}}
+{{!-- Define custom properties for swiftype --}}
 {{#post}}
     {{#if feature_image}}
         <meta class="swiftype" name="feature_image" data-type="string" content="{{feature_image}}" />
