--- a/src/sass/common/_themes.scss
+++ b/src/sass/common/_themes.scss
@@ -20,6 +20,7 @@
   --toggle-darkmode-button-color: #fff;
   --table-background-color-odd: #fafafa;
   --table-head-border-bottom: #e2e2e2;
+  --placeholder: #3b4241;
 }
 
 [data-theme="dark"] {
@@ -43,6 +44,7 @@
   --toggle-darkmode-button-color: #88FFE8;
   --table-background-color-odd: #050505;
   --table-head-border-bottom: #1d1d1d;
+  --placeholder: #edf0f0;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -67,5 +69,6 @@
     --toggle-darkmode-button-color: #88FFE8;
     --table-background-color-odd: #050505;
     --table-head-border-bottom: #1d1d1d;
+    --placeholder: #edf0f0;
   }
 }
