--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -1,6 +1,7 @@
 .m-header {
   width: 100%;
   z-index: 4;
+  padding: 5px 0;
   background-color: var(--background-color);
   will-change: transform;
   @include transition(transform 0.4s cubic-bezier(0.165, 0.84, 0.44, 1));
