--- a/src/sass/components/header/_mobile-topbar.scss
+++ b/src/sass/components/header/_mobile-topbar.scss
@@ -1,9 +1,11 @@
 .m-mobile-topbar {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   height: $mobile-bar-height;
   position: relative;
   z-index: 2;
+  padding: 0 15px;
 
   @include respond-to('medium') {
     display: none !important;
