--- a/src/sass/components/header/_nav.scss
+++ b/src/sass/components/header/_nav.scss
@@ -105,24 +105,30 @@
 
 // Secondary navigation banner
 .nav-secondary {
-  display: none;
-  padding: 1rem 0;
-  margin-top: 2rem;
-  // border-bottom: 1px solid var(--primary-border-color);
+  padding: 0.5rem 0;
   border-top: 1px solid var(--primary-border-color);
   @include respond-to('medium') {
-    display: block;
+    padding: 1rem 0;
+    margin-top: 2rem;
   }
 }
 
 .nav-secondary-wrap {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  text-align: left;
+  @include respond-to('medium') {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
 
 .nav-secondary-list {
   padding: 0; margin: 0;
+  display: none;
+
+  @include respond-to('medium') {
+    display: block;
+  }
 
   li {
     display: inline-block;
