--- a/src/sass/components/search/_search.scss
+++ b/src/sass/components/search/_search.scss
@@ -8,7 +8,7 @@
 .st-default-search-input {
   height: 48px;
   border: none;
-  padding: 10px 0 10px 32px;
+  padding: 10px 10px 10px 32px;
   color: var(--titles-color);
 }
 
