--- a/author.hbs
+++ b/author.hbs
@@ -64,7 +64,7 @@ into the {body} of the default.hbs template --}}
   </section>
   {{/author}}
   
-  <main>
+  <main id="main-content">
     <div class="l-content">
       <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
         <div class="l-grid centered">
