--- a/error-404.hbs
+++ b/error-404.hbs
@@ -9,7 +9,7 @@ into the {body} of the default.hbs template --}}
 {{!-- Special header.hbs partial to generate the <header> tag --}}
 {{> header}}
 
-<main class="l-fullscreen">
+<main class="l-fullscreen" id="main-content">
   <section class="l-fullscreen__content" data-aos="fade-up" data-aos-delay="300">
     <h1 class="m-404-title">404</h1>
     <p class="m-404-subtitle">{{t "Page not found"}}</p>
