--- a/index.hbs
+++ b/index.hbs
@@ -11,7 +11,7 @@ into the {body} of the default.hbs template --}}
   {{!-- Special header.hbs partial to generate the <header> tag --}}
   {{> header background=@site.cover_image}}
   </section>
-  <main>
+  <main id="main-content">
     <div class="l-content is-homepage">
       <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
         <div class="l-grid centered">
