--- a/page-searchresults.hbs
+++ b/page-searchresults.hbs
@@ -17,7 +17,7 @@ into the {body} of the default.hbs template --}}
       <p class="m-hero-description"></p>
     </div>
     </section>
-    <main>
+    <main id="main-content">
       <div class="l-content">
         <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
             {{!-- Display search results in this container --}}
