--- a/page-tags.hbs
+++ b/page-tags.hbs
@@ -20,7 +20,7 @@ into the {body} of the default.hbs template --}}
       {{/if}}
     </div>
     </section>
-    <main>
+    <main id="main-content">
       <div class="l-content">
         <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
             {{#get 'tags' limit='all' include='count.posts' order='count.posts desc'}}
