--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -2,6 +2,7 @@
 This header template is shared across all the pages.
 --}}
 
+<a href="#main-content" class="skip-nav">Skip to content</a>
 {{#if background}}
   <header class="m-header with-picture js-header">
 {{else}}
