--- a/post.hbs
+++ b/post.hbs
@@ -16,7 +16,7 @@ into the {body} of the default.hbs template --}}
   </section>
   {{/post}}
   
-  <main>
+  <main id="main-content">
     <article>
       <div class="l-content in-post">
         {{!-- Everything inside the #post tags pulls data from the post --}}
