--- a/src/sass/components/ui/_icon-button.scss
+++ b/src/sass/components/ui/_icon-button.scss
@@ -96,7 +96,7 @@
     // z-index: 6;
     position: relative;
 
-    &.active {
+    &.active, &:focus {
       color: var(--primary-subtle-color);
     }
   }
