--- a/src/sass/components/header/_header.scss
+++ b/src/sass/components/header/_header.scss
@@ -42,3 +42,30 @@
     background-color: var(--background-color);
   }
 }
+
+// a11y Skip Navigation
+.skip-nav {
+  position: absolute;
+  top: -1000px;
+  left: -1000px;
+  height: 1px;
+  width: 1px;
+  text-align: left;
+  overflow: hidden;
+}
+
+a.skip-nav:active,
+a.skip-nav:focus,
+a.skip-nav:hover {
+  left: 0;
+  top: 0;
+  z-index: 999;
+  width: auto;
+  height: auto;
+  background: var(--background-color);
+  padding: .5rem;
+  font-size:1.2rem;
+  color: var(--secondary-foreground-color);
+  border: 3px solid var(--secondary-foreground-color);
+  overflow: visible;
+}
