--- a/tag.hbs
+++ b/tag.hbs
@@ -24,7 +24,7 @@ into the {body} of the default.hbs template --}}
   </section>
   {{/tag}}
   
-  <main>
+  <main id="main-content">
     <div class="l-content">
       <div class="l-wrapper" data-aos="fade-up" data-aos-delay="300">
         <div class="l-grid centered">
