--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -34,83 +34,83 @@ This header template is shared across all the pages.
           </nav>
         </div>
       </div>
+        <nav class="nav-secondary" data-aos="fade-down">
+          <div class="l-wrapper">
+            <div class="nav-secondary-wrap">
+                <ul class="nav-secondary-list">
+                  {{navigation type="secondary"}}
+                  <li role="menuitem" class="js-submenu-option submenu-option">
+                      <button class="m-icon-button in-menu-main more js-toggle-submenu" aria-label="Toggle submenu">
+                        <span class="icon-more"></span>
+                      </button>
+                      <div class="m-submenu js-submenu">
+                        <div class="l-wrapper in-submenu">
+                          <section class="m-recent-articles">
+                            <h3 class="m-submenu-title in-recent-articles"><a href="/blog">{{t "Recent articles"}}</a></h3>
+                            <div class="m-toggle-darkmode js-tooltip" data-tippy-content="{{t "Toggle dark mode"}}">
+                              <input type="checkbox" class="js-toggle-darkmode">
+                              <div></div>
+                            </div>
+                            <div class="js-recent-articles">
+                              {{#get "posts" limit="4" order="published_at desc"}}
+                              {{#foreach posts}}
+                              <div>
+                                <a href="{{url}}" class="m-recent-article">
+                                  <div class="m-recent-article__picture">
+                                    {{#if feature_image}}
+                                    <div class="lozad" data-background-image="{{img_url feature_image size="s"}}"></div>
+                                    {{else}}
+                                    <div class="no-image lozad" data-background-image="{{asset "images/no-image.png"}}"></div>
+                                    {{/if}}
+                                  </div>
+                                  <h3 class="m-recent-article__title js-recent-article-title" title="{{title}}">
+                                    {{title}}
+                                  </h3>
+                                  <span class="m-recent-article__date">{{date published_at timeago="true"}}</span>
+                                </a>
+                              </div>
+                              {{else}}
+                              <div class="m-not-found in-recent-articles">{{t "No recent articles found :("}}</div>
+                              {{/foreach}}
+                              {{/get}}
+                            </div>
+                          </section>
+                          <section class="m-tags p-bottom">
+                            <h3 class="m-submenu-title"><a href="{{@blog.url}}/tags">{{t "All Tags"}}</a></h3>
+                            {{#get "tags"}}
+                            <ul>
+                              {{#foreach tags}}
+                              <li>
+                                <a href="{{url}}">{{name}}</a>
+                              </li>
+                              {{else}}
+                              <li class="m-not-found">{{t "No tags found :("}}</li>
+                              {{/foreach}}
+                            </ul>
+                            {{/get}}
+                          </section>
+                          <section class="m-tags">
+                            <h3 class="m-submenu-title"><a href="{{@blog.url}}/authors">Authors</a></h3>
+                            {{#get "authors" order="name asc" }}
+                            <ul>
+                              {{#foreach authors}}
+                              <li>
+                                <a href="{{url}}">{{name}}</a>
+                              </li>
+                              {{else}}
+                              <li class="m-not-found">{{t "No authors found :("}}</li>
+                              {{/foreach}}
+                            </ul>
+                            {{/get}}
+                          </section>
+                        </div>
+                      </div>
+                    </li>
+                </ul>
+              {{> search}}
+            </div>
+          </div>
+        </nav>
     </div>
   </div>
-  <nav class="nav-secondary" data-aos="fade-down">
-    <div class="l-wrapper">
-      <div class="nav-secondary-wrap">
-          <ul class="nav-secondary-list">
-            {{navigation type="secondary"}}
-            <li role="menuitem" class="js-submenu-option">
-                <button class="m-icon-button in-menu-main more js-toggle-submenu" aria-label="Toggle submenu">
-                  <span class="icon-more"></span>
-                </button>
-                <div class="m-submenu js-submenu">
-                  <div class="l-wrapper in-submenu">
-                    <section class="m-recent-articles">
-                      <h3 class="m-submenu-title in-recent-articles"><a href="/blog">{{t "Recent articles"}}</a></h3>
-                      <div class="m-toggle-darkmode js-tooltip" data-tippy-content="{{t "Toggle dark mode"}}">
-                        <input type="checkbox" class="js-toggle-darkmode">
-                        <div></div>
-                      </div>
-                      <div class="js-recent-articles">
-                        {{#get "posts" limit="4" order="published_at desc"}}
-                        {{#foreach posts}}
-                        <div>
-                          <a href="{{url}}" class="m-recent-article">
-                            <div class="m-recent-article__picture">
-                              {{#if feature_image}}
-                              <div class="lozad" data-background-image="{{img_url feature_image size="s"}}"></div>
-                              {{else}}
-                              <div class="no-image lozad" data-background-image="{{asset "images/no-image.png"}}"></div>
-                              {{/if}}
-                            </div>
-                            <h3 class="m-recent-article__title js-recent-article-title" title="{{title}}">
-                              {{title}}
-                            </h3>
-                            <span class="m-recent-article__date">{{date published_at timeago="true"}}</span>
-                          </a>
-                        </div>
-                        {{else}}
-                        <div class="m-not-found in-recent-articles">{{t "No recent articles found :("}}</div>
-                        {{/foreach}}
-                        {{/get}}
-                      </div>
-                    </section>
-                    <section class="m-tags p-bottom">
-                      <h3 class="m-submenu-title"><a href="{{@blog.url}}/tags">{{t "All Tags"}}</a></h3>
-                      {{#get "tags"}}
-                      <ul>
-                        {{#foreach tags}}
-                        <li>
-                          <a href="{{url}}">{{name}}</a>
-                        </li>
-                        {{else}}
-                        <li class="m-not-found">{{t "No tags found :("}}</li>
-                        {{/foreach}}
-                      </ul>
-                      {{/get}}
-                    </section>
-                    <section class="m-tags">
-                      <h3 class="m-submenu-title"><a href="{{@blog.url}}/authors">Authors</a></h3>
-                      {{#get "authors" order="name asc" }}
-                      <ul>
-                        {{#foreach authors}}
-                        <li>
-                          <a href="{{url}}">{{name}}</a>
-                        </li>
-                        {{else}}
-                        <li class="m-not-found">{{t "No authors found :("}}</li>
-                        {{/foreach}}
-                      </ul>
-                      {{/get}}
-                    </section>
-                  </div>
-                </div>
-              </li>
-          </ul>
-        {{> search}}
-      </div>
-    </div>
-  </nav>
 </header>
