--- a/src/sass/components/header/_nav.scss
+++ b/src/sass/components/header/_nav.scss
@@ -124,15 +124,18 @@
 
 .nav-secondary-list {
   padding: 0; margin: 0;
-  display: none;
 
-  @include respond-to('medium') {
-    display: block;
-  }
-
-  li {
-    display: inline-block;
+  > li {
+    display: none;
     margin-right: 2rem;
+
+    @include respond-to('medium') {
+      display: inline-block;
+    }
+
+    &:last-child {
+      display: inline-block;
+    }
 
     &.current {
       font-weight: bold;
