--- a/src/sass/components/header/_menu.scss
+++ b/src/sass/components/header/_menu.scss
@@ -19,6 +19,7 @@
     z-index: 10;
     height: 100vh;
     @include transform(scale(1));
+    padding-bottom: 4rem;
   }
 
   @include respond-to('medium') {
