--- a/src/sass/components/header/_menu.scss
+++ b/src/sass/components/header/_menu.scss
@@ -19,7 +19,6 @@
     z-index: 10;
     height: 100vh;
     @include transform(scale(1));
-    padding-bottom: 4rem;
   }
 
   @include respond-to('medium') {
@@ -36,7 +35,7 @@
 }
 
 .m-menu__main {
-  padding: 50px 0 5px;
+  padding: 50px 0 10rem;
   min-height: 100%;
 
   @include respond-to('medium') {
