--- a/src/sass/components/ui/_icon-button.scss
+++ b/src/sass/components/ui/_icon-button.scss
@@ -94,10 +94,9 @@
 
   &.more {
     font-size: 6px;
-    // z-index: 6;
     position: relative;
-
-    &.active, &:focus {
+    color: var(--nav-secondary-link);
+    &.active{
       color: var(--primary-subtle-color);
     }
   }
