--- a/partials/search.hbs
+++ b/partials/search.hbs
@@ -10,6 +10,6 @@ This search template is used to display the search form.
             id="search" 
             class="filter-table site-search-input st-default-search-input" 
             type="search" 
-            placeholder="Search the WonderProxy blog"  />
+            placeholder="Search blog"  />
     </form>
 </div>
