--- a/src/sass/components/header/_nav.scss
+++ b/src/sass/components/header/_nav.scss
@@ -23,7 +23,7 @@
     }
 
     li {
-      color: var(--titles-color);
+      color: var(--primary-button);
       letter-spacing: 0.3px;
       font-size: 1rem;
       margin-bottom: 15px;
@@ -60,14 +60,9 @@
   margin-right: 0.7rem !important;
 }
 
-.nav-blog {
-  a {
-    font-weight: 600;
-    color: $wonderGreenDark;
-    @include respond-to('medium') {
-      border-bottom: 4px solid $wonderTeal;
-    }
-  }
+.nav-blog a {
+  font-weight: 600;
+  color: $wonderGreenDark;
 }
 
 .nav-explore-plans {
@@ -108,8 +103,9 @@
   padding: 0.5rem 0;
   border-top: 1px solid var(--primary-border-color);
   @include respond-to('medium') {
-    padding: 1rem 0;
     margin-top: 2rem;
+    background: var(--nav-secondary-bg);
+    border: none;
   }
 }
 
@@ -124,6 +120,8 @@
 
 .nav-secondary-list {
   padding: 0; margin: 0;
+  display: flex;
+  align-items: center;
 
   > li {
     display: none;
@@ -139,10 +137,11 @@
 
     &.current {
       font-weight: bold;
+      color: var(--link-color);
     }
 
     a {
-      color: var(--primary-button);
+      color: var(--nav-secondary-link);
     }
   }
 }
