Add media query for dark mode, add why link, update post count per page

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -45,6 +45,7 @@ This footer template is shared across all the pages.
                 <ul>
                     <li><a href="/faq">FAQ</a></li>
                     <li><a href="/blog/">Blog</a></li>
+                    <li><a href="/why">Why WonderProxy?</a></li>
                     <li><a href="/qa">For developers & QA</a></li>
                     <li><a href="/marketing">For marketers</a></li>
                     <li><a href="/localization-testing">What is localization testing?</a></li>
