--- a/src/sass/common/_backgrounds.scss
+++ b/src/sass/common/_backgrounds.scss
@@ -22,6 +22,10 @@
       background-size: contain, 25% 45%, 25% 40%, contain, contain;
     }
 
+    @media (prefers-color-scheme: dark) {
+        background: none;
+    }
+    
     [data-theme="dark"] & {
         background: none;
     }
