--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -48,9 +48,9 @@ This footer template is shared across all the pages.
                     <li><a href="/why">Why WonderProxy?</a></li>
                     <li><a href="/qa">For developers & QA</a></li>
                     <li><a href="/marketing">For marketers</a></li>
+                    <li><a href="/resources">Resources</a></li>
                     <li><a href="/localization-testing">What is localization testing?</a></li>
                     <li><a href="/what-is-geoip">What is geoIP?</a></li>
-                    <li><a href="/docs/solutions">Solutions</a></li>
                 </ul>
             </div>
             <div>
