--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,5 +1,6 @@
 // @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700');
 
+
 @import "common/reset";
 @import "common/mixins";
 @import "common/variables";
@@ -8,6 +9,9 @@
 @import "common/global";
 @import "common/icons";
 @import "common/backgrounds";
+
+@import "libs/highlight";
+@import "common/highlight-theme";
 
 @import "layouts/wrapper";
 @import "layouts/content";
