Copy file instead of mixing it

--- a/default.hbs
+++ b/default.hbs
@@ -45,8 +45,8 @@
       const ghostHost = "{{@site.url}}"
       // @license-end
     </script>
-    <script src="{{asset "js/highlight.min.js"}}"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
+    <script type="text/javascript" src="{{asset "js/highlight.min.js"}}"></script>
+    <script type="text/javascript">hljs.initHighlightingOnLoad();</script>
   </head>
   <body class="{{body_class}}">
     <!-- Google Tag Manager (noscript) -->
