Tweaks to code styling

--- a/src/sass/common/_highlight-theme.scss
+++ b/src/sass/common/_highlight-theme.scss
@@ -9,8 +9,8 @@ Adapted from: https://github.com/zenorocha/dracula-theme
 .hljs {
     display: block;
     overflow-x: auto;
-    padding: 0.5em;
     background: $wonderTealDark;
+    padding: 16px;
 }
 
 .hljs-keyword,
