--- a/src/sass/common/_highlight-theme.scss
+++ b/src/sass/common/_highlight-theme.scss
@@ -47,6 +47,7 @@ Adapted from: https://github.com/zenorocha/dracula-theme
     color: $wonderBlue200;
 }
 
+.hljs-number,
 .hljs-comment,
 .hljs-quote,
 .hljs-deletion,
